# clipboard_cleaner

./: LICENSE  README.md  clipboard_cleaner.py  pyproject.toml
